# envlockr-cli

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEMO.md  EXAMPLES.md  GITHUB_ACTION.md  LICENSE  QUICKSTART.md  README.md  RELEASE.md  SECURITY.md  demo.tape  envlockr.py  pyproject.toml  requirements.txt  run_tests.py  test_install.py
.github/: ACTIONS.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: scan-secrets.sh
.github/workflows/: ci.yml  secret-scan.yml  test.yml  tests.yml
envlockr.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
npm/: README.md  package.json
tests/: test_envlockr.py
